# snippy

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.deploy  README.md
cmake/: FindBoost.cmake  FindDPP.cmake  FindFMT.cmake  FindSNDFILE.cmake
include/: audioMaker.h  bot.h  commandHandler.h  discordService.h  utils.h
src/: audioMaker.cc  bot.cc  commandHandler.cc  discordService.cc  main.cc  utils.cc
